--- a/foodlogback/pom.xml
+++ b/foodlogback/pom.xml
@@ -90,6 +90,12 @@
             <version>5.6.35</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>4.4.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
